--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 	<meta content="Bennett University, Uphoria, hackathon, software, technology" name="keywords">
-	<meta name="description" content="HackPhoria is a software hackathon event where developers, students, hobbyists participate to engineer an innovative application revolving around the themes provided a day before the event. The flagship event of Uphoria’20, HackPhoria is an overnight hackathon fuelled by creativity, passion, grit and coffee with prizes for winners and Best X ( X=Design, Best Pitch etc. TBD).">
+
 
 
 	<link href="img/favicon.png" rel="icon">
@@ -165,7 +165,7 @@
 				<div class="row">
 					<div class="col-lg-4 col-md-6 footer-info">
 						<img src="img/logo.png" alt="TheEvenet">
-						<p style="padding-top: 10px;">HackPhoria is a software hackathon event where developers, students, hobbyists participate to engineer an innovative application revolving around the themes provided a day before the event. The flagship event of Uphoria’20, HackPhoria is an overnight hackathon fuelled by creativity, passion, grit and coffee with prizes for winners and Best X ( X=Design, Best Pitch etc. TBD).</p>
+						<p style="padding-top: 10px;">Add some description here</p>
 					</div>
 					<div class="col-lg-4 col-md-6 footer-links">
 
