--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 		<section id="supporters" class="section-with-bg wow fadeInUp">
 			<div class="container">
 				<div class="section-header">
-					<h2>Current Sponsors</h2>
+					<h2>Sponsors</h2>
 				</div>
 
 			</div>
@@ -184,8 +184,7 @@
 		</div>
 
 	</footer>
-	<!-- #footer --> <a href="#" class="back-to-top"><i class="fa fa-angle-up"></i></a>
-	<!-- JavaScript Libraries -->
+	<a href="#" class="back-to-top"><i class="fa fa-angle-up"></i></a>
 	<script src="lib/jquery/jquery.min.js"></script>
 	<script src="lib/jquery/jquery-migrate.min.js"></script>
 	<script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -196,7 +195,6 @@
 	<script src="lib/venobox/venobox.min.js"></script>
 	<script src="lib/owlcarousel/owl.carousel.min.js"></script>
 	<script src="lib/canvas/bg-anim.js"></script>
-	<!-- Template Main Javascript File -->
 	<script src="js/main.js"></script>
 </body>
 
