--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
 
 	<section id="intro">
 		<canvas></canvas>
-		<div class="intro-container wow fadeIn"> <span class="HackPhoria">IEEE Bennett Chapter</span>
-			<h1 class="mb-4 pb-0">
-              <span>Hack</span>Phoria</h1>
+		<div class="intro-container wow fadeIn"> <h3 class="HackPhoria">IEEE Bennett Chapter Presents </h3><br>
+			<img src="img/logo.png"><br>
 			<p class="mb-4 pb-0">0-0 January | Bennett University</p>
 		</div>
 	</section>
