--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 				</div>
 				<div class="row no-gutters">
 					<div class="col-lg-6 venue-map">
-						<iframe width="600" height="500" id="gmap_canvas" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3507.2259794754586!2d77.50989381507901!3d28.472740382481!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cbf94deb6bc39%3A0x7ba6bedc9a2b537f!2sBennett%20University%20(Times%20of%20India%20Group)!5e0!3m2!1sen!2sin!4v1574762678377!5m2!1sen!2sin" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+						<iframe width="600" height="500" id="gmap_canvas" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3507.964574053926!2d77.5819205150785!3d28.450484282489935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cbfcfa276e009%3A0x171ddab508ac95cf!2sBennett%20Hatchery!5e0!3m2!1sen!2sin!4v1575299664569!5m2!1sen!2sin" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
 					</div>
 					<div class="col-lg-6 venue-info">
 						<div class="row justify-content-center">
